--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,7 @@
       <a routerLink="/main/info" class="list-group-item list-group-item-action">ABOUT</a>
       <a routerLink="/main/people" class="list-group-item list-group-item-action">PEOPLE</a>
       <a routerLink="/main/area" class="list-group-item list-group-item-action">RESEARCH</a>
+      <a routerLink="/main/international" class="list-group-item list-group-item-action">PUBLICATION</a>
       <a routerLink="/main/news" class="list-group-item list-group-item-action">NEWS & EVENT</a>
       <a routerLink="/main/seminar" class="list-group-item list-group-item-action">ARCHIVE</a>
     </div>
@@ -30,6 +31,9 @@
 
     <li class="menu01 nav-item">
       <a class="nav-link" routerLink="/main/area">RESEARCH</a>
+    </li>
+    <li class="menu01 nav-item">
+      <a class="nav-link" routerLink="/main/international">PUBLICATION</a>
     </li>
     <li class="menu01 nav-item">
       <a class="nav-link" routerLink="/main/news">NEWS & EVENT</a>
@@ -58,9 +62,8 @@
         </div>
       </div>
 
-      <video autoplay loop muted id="video-bg" poster="./assets/imgs/home_mainImg.jpg">
-
-      </video>
+      <!-- <video autoplay loop muted id="video-bg" poster="./assets/imgs/home_mainImg.jpg" src="https://www.youtube.com/embed/Ewb_YBTEkZ0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=Ewb_YBTEkZ0"> -->
+      <!-- </video> -->
 
       <div class="title text-center">
         <div class="display-2 title-text">VISUAL MEDIA LAB</div>
