--- a/src/app/main/main-content/research-projects/research-projects.component.html
+++ b/src/app/main/main-content/research-projects/research-projects.component.html
@@ -13,7 +13,7 @@
           {{project.name}}
           <!--<mat-icon class="material-icons">forward</mat-icon>-->
         </a>
-        <div class="col-sm-12 col-md-6 col-lg-5 project-desc">
+        <div class="col-sm-12 col-lg-6 project-desc">
           <table class="table menu01">
             <tbody>
 
@@ -52,30 +52,36 @@
                 </td>
               </tr>
 
+              <tr>
+                <td class="table-year">Manager</td>
+                <!-- <td *ngIf="project.funding">
+                  {{ project.funding?.name }}
+                </td> -->
+                <td *ngFor="let person of project.people">
+                  <a [routerLink]='["../people", "person", person.id]'>{{person.name}}</a>
+                </td>
+              </tr>
+
             </tbody>
           </table>
         </div>
 
-        <div class="col-sm-12 col-md-6 col-lg-5 project-img" (click)="navigateTo(project.id)">
+        <div class="col-sm-12 col-lg-6 project-img" (click)="navigateTo(project.id)">
           <!-- <img src="./../../../../assets/Contents/imgs/no_image.jpg" >  -->
           <img default="./../../../../assets/Contents/imgs/no_image.jpg"
               [srcset]= 'imgPath +project.teaser_img'
               [src]= 'imgPath +project.teaser_img'>
         </div>
 
-        <div class="col-sm-12 col-md-6 col-lg-2 project-funding">
-          <!-- <hr/>
-          <p class="menu01">Funding</p>
-          <a [href]='project.funding?.link' class="menu02">{{project.funding?.name}}</a> -->
+
+        <!-- <div class="col-sm-12 col-md-6 col-lg-2 project-funding">
           <hr/>
           <p class="menu01">Manager</p>
           <div *ngFor="let person of project.people">
             <a [routerLink]='["../people", "person", person.id]'>{{person.name}}</a>
           </div>
-        </div>
+        </div> -->
 
-      </div>
-      <div class="col-sm-12" style="height:100px;">
       </div>
 
 
