--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -68,6 +68,8 @@
   ul.navbar-nav {
     flex-grow: 1;
     flex-flow: row;
+    justify-content: space-around;
+    display: flex;
     a {
       font-weight: 500;
     }
@@ -77,7 +79,7 @@
   }
   .nav-link {
     color: $primary_white;
-    padding: 0 3rem;
+    // padding: 0 3rem;
   }
 }
 
@@ -95,14 +97,14 @@
   }
   .navbar {
     .navbar-nav {
-      display: none;
+      display: none !important;
     }
   }
 }
 
 @media (max-width: 575px) {
   .navbar-nav {
-    display: none;
+    display: none !important;
   }
 }
 
@@ -197,7 +199,7 @@
 .content {
   padding: 5rem 2rem 5rem 2rem;
   .news {
-    max-width: 1050px;
+    max-width: 1500px;
     margin: auto;
   }
   .Heading {
@@ -219,7 +221,7 @@
   .card-columns {
     margin: auto;
     .issueCard {
-      max-width:300px;
+      max-width:500px;
       margin: auto;
       margin-bottom: 1.5rem;
       cursor: pointer;
@@ -624,6 +626,11 @@ footer .copyright {
   width: 100%;
   height: 100%;
   pointer-events: none;
+}
+@media (max-width: 500px) {
+  .video-background iframe {
+    display: none;
+  }
 }
 // #vidtop-content {
 // 	top: 0;
