--- a/src/app/main/main-content/archive-seminar/archive-seminar.component.scss
+++ b/src/app/main/main-content/archive-seminar/archive-seminar.component.scss
@@ -6,7 +6,7 @@
 }
 
 .list {
-    max-width: 1200px;
+    max-width: 1600px;
     .year {
         padding: 0;
         margin-bottom: 3.5rem;
@@ -26,9 +26,9 @@ hr {
 
     .data-img {
         cursor:pointer;
-        width: 300px;
-        min-width:300px;
-        min-height:200px;
+        width: 450px;
+        min-width:450px;
+        // min-height:200px;
         img {
             width: 100%;
         }
@@ -36,7 +36,8 @@ hr {
 
     .data-desc {
         flex-grow:1;
-        margin: 0 1.5rem;
+        // margin: 0 1.5rem;
+        margin-left: 2rem;
 
         display:flex;
         flex-flow:column;
