--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -94,7 +94,7 @@
         <div class="card-deck">
           <div class="ie11-issue">
 
-            <div (click)='navigateTo(team.id)' *ngFor="let team of teams$ | async" class="card pad card-area width300">
+            <div (click)='navigateTo(team.id)' *ngFor="let team of teams$ | async" class="card pad card-area  ">
 
               <img class="img-fluid card-img-top" [srcset]=" imgPath + team.smallimg" [src]=" imgPath + team.img">
               <div class="card-block">
@@ -146,7 +146,7 @@
           </div>
 
           <div class="card-columns">
-            <div *ngFor="let issue of issues | async" class="card issueCard" (click)='navigateTo( issue.id, 2)' >
+            <div *ngFor="let issue of issues | async" class="card issueCard" (click)='navigateTo( issue.type, 2)' >
               <img class="news-img card-img-top img-fluid" [src]="imgPath + issue.img" [srcset]="issue.img ?  imgPath + issue.img : defaultImage  ">
               <div class="card-block">
                 <h4 class="card-title">{{issue.title}}</h4>
