--- a/src/app/main/main-content/about-equip/about-equip.component.html
+++ b/src/app/main/main-content/about-equip/about-equip.component.html
@@ -1,3 +1,68 @@
-<p>
-  about-equip works!
-</p>
+<div class="flex-content">
+  <div class="content col-sm container-fluid">
+
+    <!-- <div *ngFor="let key of datas | keys" class="row"> -->
+    <div class="row">
+
+      <div class="equipment col-sm-12">
+        <h3 class="equipment-title col-sm-12">Multi Projection Theater</h3>
+
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img (click)="navigateTo('')" class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt1.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt2.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt3.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt4.jpg">
+        </div>
+      </div>
+
+      <div class="equipment col-sm-12">
+        <h3 class="equipment-title col-sm-12">Motion Capture System</h3>
+
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap1.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap2.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap3.jpg">
+        </div>
+      </div>
+    
+      <div class="equipment col-sm-12">
+        <h3 class="equipment-title col-sm-12">Stereoscopic System</h3>
+
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo1.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo2.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo3.jpg">
+        </div>
+      </div>
+
+      <div class="equipment col-sm-12">
+        <h3 class="equipment-title col-sm-12">Multi Projection Room</h3>
+
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_0.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_1.jpg">
+        </div>
+        <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_5.jpg">
+        </div>
+      </div>
+
+
+  </div>
+</div>
