--- a/src/app/main/main-content/research-thesis/research-thesis.component.scss
+++ b/src/app/main/main-content/research-thesis/research-thesis.component.scss
@@ -39,7 +39,7 @@ hr {
         margin: 0 1.5rem;
         .people_name {
             font-size:0.81rem;
-            margin-bottom: 1rem;
+            margin: 1rem 0;
             p {
                 display: inline;
                 color: rgba(0,0,0,0.75);
