--- a/src/app/main/main-content/research-projects/research-projects.component.scss
+++ b/src/app/main/main-content/research-projects/research-projects.component.scss
@@ -28,7 +28,6 @@
     .project-title {
         text-decoration: none;
         margin-top: 1.5rem;
-        margin-bottom: 3.5rem;
         padding:0;
     }
 }
@@ -39,6 +38,7 @@
     table {
         font-size: 0.9rem;
         max-width: 600px;
+        margin-top: 3.5rem;
 
         .table-year {
             width: 4.5rem;
