--- a/src/app/main/main-content/research-projects-individual/research-projects-individual.component.scss
+++ b/src/app/main/main-content/research-projects-individual/research-projects-individual.component.scss
@@ -36,6 +36,9 @@
         font-size: 2rem;
         margin-bottom: 2rem;
     }
+    .project-desc-text {
+        margin-bottom: 2rem;
+    }
 }
 .pad {
     h2, h3, h5, p {
@@ -61,28 +64,28 @@
 }
 
 
-.project-manager, .project-partners {
-    .people-box {
-        display:flex;
-        max-width:600px;
+// .project-manager, .project-partners {
+//     .people-box {
+//         display:flex;
+//         max-width:600px;
 
-        .people-img {
-            display: flex;
-            align-items: center;
-            img {
-                margin: 0 auto;
-                width: 180px;
-            }
-        }
-        .people-text {
-            margin-left:2rem;
-            padding:0;
-            .menu02 {
-                margin: 0.5rem 0;
-            }
-        }
-    }
-}
+//         .people-img {
+//             display: flex;
+//             align-items: center;
+//             img {
+//                 margin: 0 auto;
+//                 width: 180px;
+//             }
+//         }
+//         .people-text {
+//             margin-left:2rem;
+//             padding:0;
+//             .menu02 {
+//                 margin: 0.5rem 0;
+//             }
+//         }
+//     }
+// }
 
 .video-box {
     margin-bottom: 1.5rem;
@@ -96,6 +99,9 @@
 }
 
 @media (max-width: 576px) {
+    .row {
+        margin: 3.5rem 1.5rem 6rem 1.5rem;
+    }
     .people-box {
         flex-flow:column;
     }
@@ -112,6 +118,102 @@
 }
 
 .divider {
-    margin: 0 2rem;
+    margin: 0;
     margin-bottom: 2rem;
+}
+
+
+.people-box {
+    display:flex;
+    max-width:600px;
+
+    .people-img {
+        display: flex;
+        align-items: center;
+        .people-img-box {
+            width: 250px
+        }
+        img {
+            margin: 0 auto;
+            // width: 180px;
+            width: 100%;
+        }
+    }
+    .people-text {
+        margin-left:2rem;
+        padding:0;
+        .menu02 {
+            margin: 0.5rem 0 0 0;
+        }
+    }
+}
+
+@media (max-width: 556px) {
+    .people-box {
+        width: unset;
+        flex-flow: column;
+        .people-text {
+            max-width: 250px;
+            margin-left: 0;
+            margin-top: 2rem;
+        }
+    }
+    
+    .imgDiv {
+        min-height: 40vh;
+        .title {
+            font-size: 2rem;
+        }
+    }
+} 
+
+.people-box {
+    display:flex;
+    max-width:600px;
+
+    .people-img {
+        display: flex;
+        align-items: center;
+        .people-img-box {
+            width: 250px
+        }
+        img {
+            margin: 0 auto;
+            // width: 180px;
+            width: 100%;
+        }
+    }
+    .people-text {
+        margin-left:2rem;
+        padding:0;
+        .menu02 {
+            margin: 0.5rem 0 0 0;
+        }
+    }
+}
+
+@media (max-width: 556px) {
+    .people-box {
+        width: unset;
+        flex-flow: column;
+        .people-text {
+            max-width: 250px;
+            margin-left: 0;
+            margin-top: 2rem;
+        }
+    }
+    
+    .imgDiv {
+        min-height: 40vh;
+        .title {
+            font-size: 2rem;
+        }
+    }
+} 
+
+.project-manager {
+    .box-flex {
+        margin:0;
+        display:flex;
+    }
 }
