--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -611,7 +611,7 @@ footer .copyright {
 
 * { box-sizing: border-box; }
 .video-background {
-  background: #000;
+  background: rgba(0,0,0,0.85);
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
   z-index: -99;
